--- a/trunk/doc/man/man3/slurm_job.3
+++ b/trunk/doc/man/man3/slurm_job.3
@@ -16,7 +16,7 @@ int \fBslurm_allocate_resources\fR (
 .br 
 );
 .LP
-void \fBslurm_cancel_job\fR (
+int \fBslurm_cancel_job\fR (
 .br 
 	uint32_t \fIjob_id\fP
 .br 
@@ -149,6 +149,8 @@ On success, zero is returned. On error, -1 is returned, and errno is set appropr
 \fBESLURM_TRANSITION_STATE_NO_UPDATE\fR the requested job configuration change can not take place at this time. Try again later. 
 .LP
 \fBESLURM_ALREADY_DONE\fR the specified job has already completed and can not be modified. 
+.LP
+\fBESLURM_ACCESS_DENIED\fR the requesting user lacks authorization for the requested action (e.g. trying to delete or modify another user's job). 
 .SH "EXAMPLE"
 .eo
 .LP 
@@ -176,7 +178,7 @@ int main (int argc, char *argv[])
 .br 
 	if (slurm_allocate_resources(&job_desc_msg,&slurm_alloc_msg_ptr,true)) {
 .br
-		printf ("allocate errno %d\n", errno);
+		printf ("allocate errno %d\n", slurm_get_errno());
 .br 
 		exit (1);
 	}
@@ -187,7 +189,7 @@ int main (int argc, char *argv[])
 .br 
 	if ( slurm_job_cancel ( slurm_alloc_msg_ptr->job_id ) ) {
 .br 
-		printf ("cancel errno %d\n", errno);
+		printf ("cancel errno %d\n", slurm_get_errno());
 .br 
 		exit (1);
 .br 
@@ -203,4 +205,4 @@ int main (int argc, char *argv[])
 .ec
 .SH "SEE ALSO"
 .LP 
-\fBslurm_load_jobs\fR(3), \fBslurm_free_job_info\fR(3), \fBslurm_strerror\fR(3), \fBslurm_perror\fR(3)
+\fBslurm_free_job_info\fR(3), \fBslurm_get_errno\fR(3), \fBslurm_load_jobs\fR(3), \fBslurm_perror\fR(3), \fBslurm_strerror\fR(3)
