Initial version of scancel man page. Changed version numbers to dates in version field of API man pages.

--- a/trunk/doc/man/man3/slurm_info.3
+++ b/trunk/doc/man/man3/slurm_info.3
@@ -1,4 +1,4 @@
-.TH "Slurm API" "3" "Release 0.0.0" "Morris Jette" "Slurm informational calls"
+.TH "Slurm API" "3" "July 2002" "Morris Jette" "Slurm informational calls"
 .SH "NAME"
 .LP 
 \fBslurm_info\fR \- Slurm informational calls
