--- a/trunk/doc/man/man3/slurm_admin.3
+++ b/trunk/doc/man/man3/slurm_admin.3
@@ -1,4 +1,4 @@
-.TH "Slurm API" "3" "Release 0.0.0" "Morris Jette" "Slurm administrative calls"
+.TH "Slurm API" "3" "July 2002" "Morris Jette" "Slurm administrative calls"
 .SH "NAME"
 .LP 
 \fBslurm_job\fR \- Slurm administrative calls
