Fix typo in scancel man page.

--- a/trunk/doc/man/man1/scancel.1
+++ b/trunk/doc/man/man1/scancel.1
@@ -12,8 +12,8 @@ be printed and the job will not be cancelled.
 .TP
 OPTIONS
 .TP
-\fB-?\fR
-Report the usage for scancel.
+\fB-h\fR
+Print a help message describing the usage of scancel.
 .TP
 \fB-i\fR
 Interactive mode. Confirm each job_id.step_id before performing the cancel operation.
