Change scontrol "build" entity name to "config". Eliminate INIT_PROGRAM parameter.

--- a/trunk/doc/man/man1/scontrol.1
+++ b/trunk/doc/man/man1/scontrol.1
@@ -53,10 +53,10 @@ such as the addition of memory or processors. Running jobs continue execution.
 .TP
 \fIshow\fP \fIENTITY\fP \fPID\fP
 Display the state of the specified entity with the specified identification.
-\fIENTITY\fP may be \fIbuild\fP, \fIjob\fP, \fInode\fP or \fIpartition\fP.
+\fIENTITY\fP may be \fIconfig\fP, \fIjob\fP, \fInode\fP or \fIpartition\fP.
 \fIID\fP can be used to identify a specific element of the identified 
-entity: the build parameter, job ID, node name or partition name for 
-entities \fIbuild\fP, \fIjob\fP, \fInode\fP and \fIpartition\fP respectively. 
+entity: the configuration parameter name, job ID, node name or partition name for 
+entities \fIconfig\fP, \fIjob\fP, \fInode\fP and \fIpartition\fP respectively. 
 Multiple node names may be specified using simple regular expressions 
 (e.g. "lx[10-20]"). All other \fIID\fP values must identify a single 
 element. By default, all elements of the entity type specified are printed.
